--- a/content/docs/components.mdx
+++ b/content/docs/components.mdx
@@ -32,12 +32,12 @@ The Banner component displays important announcements or messages at the top of 
     variant="rainbow" 
     changeLayout={false}
     rainbowColors={[
-      'rgba(255,100,0, 0.5)',
-      'rgba(255,100,0, 0.5)',
+      'hsla(154, 100%, 76%, 1)',
+      'hsla(234, 100%, 83%, 1)',
       'transparent',
-      'rgba(255,100,0, 0.5)',
+      'hsla(288, 100%, 81%, 1)',
       'transparent',
-      'rgba(255,100,0, 0.5)',
+      'hsla(154, 100%, 76%, 1)',
       'transparent',
     ]}
   >
