--- a/content/docs/components/accordion.mdx
+++ b/content/docs/components/accordion.mdx
@@ -1,7 +1,7 @@
 ---
 title: Accordion
 description: All available components from Fumadocs
-icon: Layout
+icon: LayoutDashboard
 ---
 import { Accordion, Accordions } from 'fumadocs-ui/components/accordion';
 
