--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,6 +1,7 @@
 ---
-title: Introduction
+title: Hello World
 description: Your first document
+icon: Sun
 ---
 
 Welcome to the docs! You can start writing documents in `/content/docs`.
