--- a/content/docs/test.mdx
+++ b/content/docs/test.mdx
@@ -1,11 +1,16 @@
 ---
-title: Introduction
-description: Your first document
+title: Components
+description: Components
+icon: Heart
 ---
 
-Welcome to the docs! You can start writing documents in `/content/docs`.
+## Code Block
 
-## What is Next?
+```js
+console.log('Hello World');
+```
+
+## Cards
 
 <Cards>
   <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
