--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,6 +1,7 @@
 ---
-title: Overview
+title: Home
 description: What is next-forge and how do I get started?
+icon: home
 ---
 
 next-forge is a production-grade [Turborepo](https://turborepo.com) template for [Next.js](https://nextjs.org/) apps. It is designed to be a comprehensive starting point for new apps, providing a solid, opinionated foundation with a minimal amount of configuration.
